Metido Primefaces en todas las vistas

--- a/sdi2-38/WebContent/error.xhtml
+++ b/sdi2-38/WebContent/error.xhtml
@@ -12,7 +12,7 @@
 	<ui:define name="cuerpo">
 		<h:form id="form-principal">
 			<p:panel header="#{msgs.tituloOperacionError}">
-				<h:messages />
+				<p:messages />
 			</p:panel>
 		
 		<ui:include src="/snippets/pie-casa.xhtml" />
