--- a/sdi2-38/WebContent/listarSolicitantes.xhtml
+++ b/sdi2-38/WebContent/listarSolicitantes.xhtml
@@ -23,15 +23,15 @@
 					</p:column>
 					<p:column id="aceptarPasajero">
 						<f:facet name="header">#{msgs.enlace_aceptar}</f:facet>
-						<h:commandLink action="#{applicationsController.aceptar(soli)}" value="#{msgs.enlace_aceptar}"/>
+						<p:commandLink action="#{applicationsController.aceptar(soli)}" value="#{msgs.enlace_aceptar}" update="@form"/>
 					</p:column>
 					<p:column id="excluirPasajero">
 						<f:facet name="header">#{msgs.enlace_excluir}</f:facet>
-						<h:commandLink action="#{applicationsController.excluir(soli)}" value="#{msgs.enlace_excluir}"/>
+						<p:commandLink action="#{applicationsController.excluir(soli)}" value="#{msgs.enlace_excluir}" update="@form"/>
 					</p:column>
 				</p:dataTable>
 			</p:panel>
-			<h:messages style="color:red;margin:8px;" />
+			<p:messages style="color:red;margin:8px;" />
 		</h:form>
 	
 	</ui:define>
