--- a/sdi2-38/WebContent/principalRegistrado.xhtml
+++ b/sdi2-38/WebContent/principalRegistrado.xhtml
@@ -21,7 +21,7 @@
 				</h1>
 			</center>
 
-			<h:messages style="color:red;margin:8px;"/>
+			<p:messages style="color:red;margin:8px;"/>
 
 		</h:form>
 	</ui:define>
