--- a/sdi2-38/WebContent/registroViaje.xhtml
+++ b/sdi2-38/WebContent/registroViaje.xhtml
@@ -18,10 +18,10 @@
 		<hr/>
 		<br/>
 		
-		<h:selectBooleanCheckbox value="#{tripsController.precargarDatos}">
-			<f:ajax listener="#{tripsController.modificarViajesACancelar(valtrip)}"
-			render="@form"/>
-		</h:selectBooleanCheckbox>
+		<p:selectBooleanCheckbox value="#{tripsController.precargarDatos}">
+			<p:ajax listener="#{tripsController.modificarViajesACancelar(valtrip)}"
+			update="@form"/>
+		</p:selectBooleanCheckbox>
 		
 		#{msgs.mensaje_precargarDatos}
 		
