--- a/sdi2-38/WebContent/snippets/pie-casa.xhtml
+++ b/sdi2-38/WebContent/snippets/pie-casa.xhtml
@@ -6,12 +6,10 @@
 	
 	<h:form id="form-pie">
 		
-		<h:commandLink value="#{msgs.enlace_casa}" immediate="true"
-			action="/principalRegistrado.xhtml" rendered="#{sesion.usuario!=null}">
-		</h:commandLink>
-		<h:commandLink value="#{msgs.enlace_casa}"
-			action="/login.xhtml" rendered="#{sesion.usuario==null}">
-		</h:commandLink>
+		<p:commandLink value="#{msgs.enlace_casa}" immediate="true"
+			action="/principalRegistrado.xhtml" rendered="#{sesion.usuario!=null}"/>
+		<p:commandLink value="#{msgs.enlace_casa}"
+			action="/login.xhtml" rendered="#{sesion.usuario==null}" />
 		<p:separator />
 	</h:form>
 </ui:composition>
