--- a/sdi2-38/WebContent/snippets/trip-form.xhtml
+++ b/sdi2-38/WebContent/snippets/trip-form.xhtml
@@ -6,239 +6,231 @@
 
 	<strong>#{msgs.campo_datosSalida}</strong>
 
-	<h:panelGrid columns="2" styleClass="formTable">
+	<p:panelGrid columns="2" styleClass="formTable">
 			#{msgs.campo_direccion}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.departure.address}"
+			<p:inputText value="#{tripsController.trip.departure.address}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="departureAddress" size="15">
-			</h:inputText>
-			<h:message for="departureAddress" style="color:red;margin:8px;" />
+				id="departureAddress" size="15" />
+			<p:message for="departureAddress" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_ciudad}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.departure.city}"
+			<p:inputText value="#{tripsController.trip.departure.city}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="departureCity" size="15">
-			</h:inputText>
-			<h:message for="departureCity" style="color:red;margin:8px;" />
+				id="departureCity" size="15" />
+			<p:message for="departureCity" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{campo_estado}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.departure.state}"
+			<p:inputText value="#{tripsController.trip.departure.state}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="departureState" size="15">
-			</h:inputText>
-			<h:message for="departureState" style="color:red;margin:8px;" />
+				id="departureState" size="15" />
+			<p:message for="departureState" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_pais}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.departure.country}"
+			<p:inputText value="#{tripsController.trip.departure.country}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="departureCountry" size="15">
-			</h:inputText>
-			<h:message for="departureCountry" style="color:red;margin:8px;" />
+				id="departureCountry" size="15" />
+			<p:message for="departureCountry" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_codigoPostal}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.departure.zipCode}"
+			<p:inputText value="#{tripsController.trip.departure.zipCode}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				converterMessage="#{msgs.mensaje_valorInvalido}" id="departureCP"
 				size="15">
 				<f:convertNumber maxFractionDigits="0" />
-			</h:inputText>
-			<h:message for="departureCP" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="departureCP" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_latitud}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.departure.waypoint.lat}"
+			<p:inputText value="#{tripsController.trip.departure.waypoint.lat}"
 				id="departureLatitude" size="15">
 				<f:converter converterId="NullableNumberConverter" />
-			</h:inputText>
-			<h:message for="departureLatitude" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="departureLatitude" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_longitud}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.departure.waypoint.lon}"
+			<p:inputText value="#{tripsController.trip.departure.waypoint.lon}"
 				id="departureLongitud" size="15">
 				<f:converter converterId="NullableNumberConverter" />
-			</h:inputText>
-			<h:message for="departureLongitud" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="departureLongitud" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_fechaConFormato}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.departureDateConFormato}"
+			<p:inputText value="#{tripsController.departureDateConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="departureDate">
 				<f:validateRegex
 					pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]" />
-			</h:inputText>
-			<h:message for="departureDate" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="departureDate" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_horaConFormato}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.departureHourConFormato}"
+			<p:inputText value="#{tripsController.departureHourConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="departureHour">
 				<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]" />
-			</h:inputText>
-			<h:message for="departureHour" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="departureHour" style="color:red;margin:8px;" />
 		</h:panelGroup>
-	</h:panelGrid>
+	</p:panelGrid>
 
 	<strong>#{msgs.campo_datosLlegada}</strong>
 
-	<h:panelGrid columns="2" styleClass="formTable">
+	<p:panelGrid columns="2" styleClass="formTable">
 			#{msgs.campo_direccion}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.destination.address}"
+			<p:inputText value="#{tripsController.trip.destination.address}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="arrivalAddress" size="15">
-			</h:inputText>
-			<h:message for="arrivalAddress" style="color:red;margin:8px;" />
+				id="arrivalAddress" size="15" />
+			<p:message for="arrivalAddress" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_ciudad}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.destination.city}"
+			<p:inputText value="#{tripsController.trip.destination.city}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="arrivalCity" size="15">
-			</h:inputText>
-			<h:message for="arrivalCity" style="color:red;margin:8px;" />
+				id="arrivalCity" size="15" />
+			<p:message for="arrivalCity" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{campo_estado}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.destination.state}"
+			<p:inputText value="#{tripsController.trip.destination.state}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="arrivalState" size="15">
-			</h:inputText>
-			<h:message for="arrivalState" style="color:red;margin:8px;" />
+				id="arrivalState" size="15" />
+			<p:message for="arrivalState" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_pais}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.destination.country}"
+			<p:inputText value="#{tripsController.trip.destination.country}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="arrivalCountry" size="15">
-			</h:inputText>
-			<h:message for="arrivalCountry" style="color:red;margin:8px;" />
+				id="arrivalCountry" size="15" />
+			<p:message for="arrivalCountry" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_codigoPostal}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.destination.zipCode}"
+			<p:inputText value="#{tripsController.trip.destination.zipCode}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				converterMessage="#{msgs.mensaje_valorInvalido}" id="arrivalCP"
 				size="15">
 				<f:convertNumber maxFractionDigits="0" />
-			</h:inputText>
-			<h:message for="arrivalCP" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="arrivalCP" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_latitud}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.destination.waypoint.lat}"
+			<p:inputText value="#{tripsController.trip.destination.waypoint.lat}"
 				id="arrivalLatitude" size="15">
 				<f:converter converterId="NullableNumberConverter" />
-			</h:inputText>
-			<h:message for="arrivalLatitude" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="arrivalLatitude" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_longitud}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.destination.waypoint.lon}"
+			<p:inputText value="#{tripsController.trip.destination.waypoint.lon}"
 				id="arrivalLongitud" size="15">
 				<f:converter converterId="NullableNumberConverter" />
-			</h:inputText>
-			<h:message for="arrivalLongitud" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="arrivalLongitud" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_fechaConFormato}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.arrivalDateConFormato}"
+			<p:inputText value="#{tripsController.arrivalDateConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="arrivalDate">
 				<f:validateRegex
 					pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]" />
-			</h:inputText>
-			<h:message for="arrivalDate" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="arrivalDate" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_horaConFormato}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.arrivalHourConFormato}"
+			<p:inputText value="#{tripsController.arrivalHourConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="arrivalHour">
 				<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]" />
-			</h:inputText>
-			<h:message for="arrivalHour" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="arrivalHour" style="color:red;margin:8px;" />
 		</h:panelGroup>
-	</h:panelGrid>
+	</p:panelGrid>
 
 	<strong>#{msgs.campos_datosGenerales}</strong>
 
-	<h:panelGrid columns="2" styleClass="formTable">
+	<p:panelGrid columns="2" styleClass="formTable">
 			#{msgs.campo_fechaCierreConFormato}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.closingDateConFormato}"
+			<p:inputText value="#{tripsController.closingDateConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="closingDate">
 				<f:validateRegex
 					pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]" />
-			</h:inputText>
-			<h:message for="closingDate" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="closingDate" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_horaCierreConFormato}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.closingHourConFormato}"
+			<p:inputText value="#{tripsController.closingHourConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="closingHour">
 				<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]" />
-			</h:inputText>
-			<h:message for="closingHour" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="closingHour" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_pasajerosMaximos}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.pasajerosMaximos}" required="true"
+			<p:inputText value="#{tripsController.pasajerosMaximos}" required="true"
 				requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				converterMessage="#{msgs.mensaje_valorInvalido}" id="maxPas"
 				size="15">
 				<f:convertNumber maxFractionDigits="0" />
-			</h:inputText>
-			<h:message for="maxPas" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="maxPas" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_precioEstimado}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.estimatedCost}"
+			<p:inputText value="#{tripsController.trip.estimatedCost}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				converterMessage="#{msgs.mensaje_valorInvalido}" id="estimatedCost"
 				size="15">
 				<f:convertNumber maxFractionDigits="2" />
-			</h:inputText>
-			<h:message for="estimatedCost" style="color:red;margin:8px;" />
+			</p:inputText>
+			<p:message for="estimatedCost" style="color:red;margin:8px;" />
 		</h:panelGroup>
 			
 			#{msgs.campo_comentarios}
 			<h:panelGroup>
-			<h:inputTextarea value="#{tripsController.trip.comments}"
+			<p:inputTextarea value="#{tripsController.trip.comments}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-				id="comments" cols="80" rows="10" wrap="virtual" />
-			<h:message for="comments" style="color:red;margin:8px;" />
+				id="comments" cols="80" rows="10" />
+			<p:message for="comments" style="color:red;margin:8px;" />
 		</h:panelGroup>
-	</h:panelGrid>
+	</p:panelGrid>
 		
-	<h:commandButton id="enviar" value="#{msgs.enlace_enviar}" action="#{tripsController.salva(sesion.usuario.id)}"/>
+	<p:commandButton id="enviar" value="#{msgs.enlace_enviar}" action="#{tripsController.salva(sesion.usuario.id)}" update="@form"/>
 
 </ui:composition>
