--- a/sdi2-38/WebContent/principalRegistrado.xhtml
+++ b/sdi2-38/WebContent/principalRegistrado.xhtml
@@ -12,7 +12,7 @@
 	</ui:define>
 
 	<ui:define name="cuerpo">
-		<h:form>
+		<h:form id="registradoPrincipal">
 			<center>
 				<h1>
 					<h:outputFormat id="bienvenido" value="#{msgs.titulo_bienvenido}">
