--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -60,7 +60,7 @@
 					</p:column>
 				</p:dataTable>
 				
-				<p:messages style="color:red;margin:8px;"/>
+				<p:messages closable="true" />
 			</p:panel>
 		</h:form>
 
