--- a/sdi2-38/WebContent/listarSolicitantes.xhtml
+++ b/sdi2-38/WebContent/listarSolicitantes.xhtml
@@ -31,7 +31,7 @@
 					</p:column>
 				</p:dataTable>
 			</p:panel>
-			<p:messages style="color:red;margin:8px;" />
+			<p:messages closable="true" />
 		</h:form>
 	
 	</ui:define>
