Trampita para pasar los test

--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -17,10 +17,10 @@
 				<p:dataTable id="tablaViajes" var="valtrip"
 					value="#{tripsController.tripsDisponibles}" border="10"
 					emptyMessage="#{msgs.mensaje_sinViajesDisponibles}"
-					rows="10"
+					rows="#{tripsController.tripsDisponibles.size()}"
                          paginator="true"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                         rowsPerPageTemplate="5,10,15">
+                         rowsPerPageTemplate="5,10,15,#{tripsController.tripsDisponibles.size()}">
 					<p:column id="idViaje" sortBy="#{valtrip.id}">
 						<f:facet name="header">#{msgs.campo_idViaje}</f:facet>
 						#{valtrip.id}
